fix overflow issue

--- a/src/base.less
+++ b/src/base.less
@@ -15,6 +15,7 @@ body {
   color: @body-font-color;
   font-family: @body-font-family;
   font-size: @body-font-size;
+  overflow-x: hidden;
 }
 a {
   color: @core-link-color;
