--- a/src/layout.less
+++ b/src/layout.less
@@ -2,7 +2,6 @@
 .container {
   margin-left: auto;
   margin-right: auto;
-  overflow-x: hidden;
   padding-left: @layout-gutter;
   padding-right: @layout-gutter;
   width: 100%;
